--- a/Kubernetes-prod/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/devops.yaml
@@ -24,7 +24,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
       - name: devops-processor
-        image: speedtools.azurecr.io/knowhow-devops-processor:9.2.0
+        image: speedtools.azurecr.io/knowhow-devops-processor:9.3.0
         imagePullPolicy: Always
         env:
             - name: spring.data.mongodb.uri
@@ -91,7 +91,7 @@ spec:
             memory: "3Gi"
             cpu: "0.3"
           limits:
-            memory: "6Gi"
+            memory: "7Gi"
             cpu: "1"
         ports:
         - containerPort: 50001
@@ -120,6 +120,17 @@ spec:
             - name: knowhow-secrets-store
               mountPath: "/mnt/prod-secrets-store"
               readOnly: true
+            - name: devops-processor-log-volume
+              mountPath: /app/logs
+      - name: promtail
+        image: grafana/promtail:2.9.2
+        args: 
+          - -config.file=/etc/promtail/config/promtail.yaml
+        volumeMounts:
+          - name: devops-processor-log-volume
+            mountPath: /app/logs
+          - name: promtail-config
+            mountPath: /etc/promtail/config
       volumes:
         - name: knowhow-secrets-store
           csi:
@@ -127,6 +138,11 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "prod-secretproviderclass"
+        - name: devops-processor-log-volume
+          emptyDir: {}
+        - name: promtail-config
+          configMap:
+            name: promtail-config
 
 ---
 
