--- a/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
@@ -25,7 +25,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
         - name: customapi
-          image: speedtools.azurecr.io/knowhow-customapi:9.2.0
+          image: speedtools.azurecr.io/knowhow-customapi:9.3.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -34,7 +34,7 @@ spec:
               memory: "750Mi"
               cpu: "0.3"
             limits:
-              memory: "4Gi"
+              memory: "8Gi"
               cpu: "1"
           readinessProbe:
             tcpSocket:
@@ -95,9 +95,9 @@ spec:
             - name: mongock.migration-scan-package
               value: "com.publicissapient.kpidashboard.apis.mongock.upgrade"
             - name: mongock.start-system-version
-              value: "9.1.0"
-            - name: mongock.end-system-version
               value: "9.2.0"
+            - name: mongock.end-system-version
+              value: "9.3.0"
           envFrom:
           - configMapRef:
               name: knowhow-config  
@@ -105,6 +105,17 @@ spec:
             - name: knowhow-secrets-store 
               mountPath: "/mnt/prod-secrets-store"
               readOnly: true
+            - name: customapi-log-volume
+              mountPath: /app/logs
+        - name: promtail
+          image: grafana/promtail:2.9.2
+          args: 
+            - -config.file=/etc/promtail/config/promtail.yaml
+          volumeMounts:
+            - name: customapi-log-volume
+              mountPath: /app/logs
+            - name: promtail-config
+              mountPath: /etc/promtail/config
       volumes:
         - name: knowhow-secrets-store
           csi:
@@ -112,6 +123,11 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "prod-secretproviderclass"
+        - name: customapi-log-volume
+          emptyDir: {}
+        - name: promtail-config
+          configMap:
+            name: promtail-config
 ---
 apiVersion: v1
 kind: Service
