--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -396,6 +396,8 @@ repoToolURL=http://scm-processor-api:8000/api
 #only two kpis i.e. mean time to merge and check-ins and merge request on developer tab if disabled
 #two more kpis along with the existing one on developer tab
 isRepoToolEnable=false
+# This flag is only for GS client for enabling multi-input field at git lab tool config screen
+isGitlabFieldEnable=true
 
 #repo tool urls
 repoToolReworkRateUrl=/metric/rework-rate-bulk/
