--- a/UI/Dockerfile
+++ b/UI/Dockerfile
@@ -44,7 +44,9 @@ RUN chown -R $USER:$USER ${CONF_LOC} \
     && chown -R $USER:$USER /var/cache/ \
     && chown -R $USER:$USER /var/lib/ \
     && chown $USER:$USER /var/run/nginx.pid \
+    && chown -R $USER:$USER /run \
     && find /var -path /var/run/secrets -prune -o -exec chown $USER:$USER {} + \
+    && chown -R $USER:$USER /var \
     && chmod 777 /var/run/nginx.pid \
     && chown -R $USER:$USER /tmp/ \
     && apk add --no-cache libcap \
