--- a/UI/Dockerfile
+++ b/UI/Dockerfile
@@ -41,6 +41,7 @@ RUN tar xvf ${HTML_LOC}${UI2_ASSETS_ARCHIVE} -C ${UI2_LOC} && tar xvf ${HTML_LOC
 RUN chown -R $USER:$USER ${CONF_LOC} \
     && chown -R $USER:$USER ${CERT_LOC} \
     && find /var -path /var/run/secrets -prune -o -exec chown $USER:$USER {} + \
+    && find /run -path /run/secrets -prune -o -exec chown -R $USER:$USER {} + \
     && apk add --no-cache libcap \
     && setcap 'cap_net_bind_service=+ep' /usr/sbin/nginx
 
