--- a/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
@@ -26,16 +26,16 @@ spec:
       containers:
         - name: customapi
           image: speedtools.azurecr.io/knowhow-customapi:9.3.0
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "750Mi"
-              cpu: "0.3"
-            limits:
-              memory: "8Gi"
-              cpu: "2"
+          # resources:
+          #   requests:
+          #     memory: "750Mi"
+          #     cpu: "0.3"
+          #   limits:
+          #     memory: "8Gi"
+          #     cpu: "2"
           readinessProbe:
             tcpSocket:
               port: 8080
