--- a/Kubernetes/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes/Kubernetes-manifest/customapi.yaml
@@ -26,16 +26,16 @@ spec:
       containers:
         - name: customapi
           image: speedtools.azurecr.io/knowhow-customapi:9.3.0
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-             memory: "750Mi"
-             cpu: "0.3"
-            limits:
-              memory: "4Gi"
-              cpu: "1"
+          # resources:
+          #   requests:
+          #    memory: "750Mi"
+          #    cpu: "0.3"
+          #   limits:
+          #     memory: "4Gi"
+          #     cpu: "1"
           readinessProbe:
             tcpSocket:
               port: 8080
