--- a/processors/github/pom.xml
+++ b/processors/github/pom.xml
@@ -23,7 +23,7 @@
   <description>Github processor service</description>
   <packaging>jar</packaging>
   <artifactId>github-processor</artifactId>
-  <version>9.3.0-SNAPSHOT</version>
+  <version>9.4.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -281,7 +281,7 @@
 
 
   <scm>
-    <tag>4.6.1</tag>
+    <tag>9.4.0</tag>
   </scm>
 </project>
 
