--- a/processors/jira-xray-zephyr-squad/pom.xml
+++ b/processors/jira-xray-zephyr-squad/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Jira Test Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>9.3.0-SNAPSHOT</version>
+	<version>9.4.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -422,6 +422,6 @@
 	</build>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>9.4.0</tag>
 	</scm>
 </project>
