DTS-34986-AuthNAuth-upgrade-final Add GSO changes

--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 auth:
-  accountLockedThreshold: 3
+  accountLockedThreshold: 5
+  accountLockedPeriod: 30
+  maxAgeSeconds: 315360000
+  includeSubdomains: true
 
   cookie:
     duration: 86400
