auth API java8 to java17

--- a/central-auth-service/authapi/src/Dockerfile
+++ b/central-auth-service/authapi/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM psknowhow/amazoncorretto:8
+FROM amazoncorretto:17
 
 ENV JAVA_OPTS="" \
     SPRING_CONFIG_LOCATION="/app/properties/authnauth.properties"
