--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -56,7 +56,9 @@ auth.notificationSubject.userVerificationFailed=User Verification Token Expired
 auth.secret=${SIGNATURE_SECRET}
 auth.auth-endpoints.authenticated-endpoints=**
 auth.auth-endpoints.public-endpoints=/saml-login,/saml-logout,/login,/register-user,/forgot-password,/reset-password,/change-password,/verifyUser,/validateEmailToken
+auth.auth-endpoints.external-endpoints=/user-approvals/pending,/approve,/reject
 auth.mailWithoutKafka=false
+auth.serverApiKey=${X_API_KEY}
 kafka.mailtopic=mail-topic
 logging.level.root=INFO
 logging.logType=both
