DTS-38319: In Sprint Automation KPI fieldLabel is mislabeled

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -1790,7 +1790,7 @@
   },
   {
     "fieldName": "jiraTestAutomationIssueType",
-    "fieldLabel": "In Sprint Automation - Issue Types with Linked Defect ",
+    "fieldLabel": "In Sprint Automation - Issue Types with Linked Test Case ",
     "fieldType": "chips",
     "fieldCategory": "Issue_Type",
     "section": "Issue Types Mapping",
