DTS-34986-AuthNAuth-upgrade-final Extract certificates from env variables

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -59,6 +59,8 @@ auth.auth-endpoints.public-endpoints=/saml-login,/saml-logout,/login,/register-u
 auth.auth-endpoints.external-endpoints=/user-approvals/pending,/approve,/reject
 auth.mailWithoutKafka=false
 auth.serverApiKey=${X_API_KEY}
+auth.rpPrivateKey=${RP_PRIVATE_KEY}
+auth.rpCertificate=${RP_CERTIFICATE}
 kafka.mailtopic=mail-topic
 logging.level.root=INFO
 logging.logType=both
