--- a/central-auth-service/authapi/.env
+++ b/central-auth-service/authapi/.env
@@ -4,3 +4,7 @@ SPRING_DATASOURCE_URL=
 SPRING_DATASOURCE_USERNAME=
 SAML_METADATA_URI=
 SAML_ENTITY_ID=
+X_API_KEY=
+RP_CERTIFICATE=
+RP_PRIVATE_KEY=
+
