change password api end point move to external endpoint

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -55,8 +55,8 @@ auth.notificationSubject.userVerification=User Verification Request
 auth.notificationSubject.userVerificationFailed=User Verification Token Expired
 auth.secret=${SIGNATURE_SECRET}
 auth.auth-endpoints.authenticated-endpoints=**
-auth.auth-endpoints.public-endpoints=/saml-login,/saml-logout,/login,/register-user,/forgot-password,/reset-password,/change-password,/verifyUser,/validateEmailToken
-auth.auth-endpoints.external-endpoints=/user-approvals/pending,/approve,/reject
+auth.auth-endpoints.public-endpoints=/saml-login,/saml-logout,/login,/register-user,/forgot-password,/reset-password,/verifyUser,/validateEmailToken
+auth.auth-endpoints.external-endpoints=/user-approvals/pending,/approve,/reject,/change-password
 auth.mailWithoutKafka=false
 auth.serverApiKey=${X_API_KEY}
 auth.rpPrivateKey=${RP_PRIVATE_KEY}
