--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -35,7 +35,7 @@ auth.baseUiUrl=https://dev-authnauth.tools.publicis.sapient.com
 #Purpose of properties : central auth backend url
 #possible values : http://authnauth:8787 , http://localhost:8787
 #used in/for : saml login , redirect and validate request
-auth.baseUrl=http://authnauth:8787
+auth.baseUrl=https://dev-authnauth.tools.publicis.sapient.com
 auth.loginView=login_view
 auth.logoutView=logout_view
 auth.mailTemplate.Access_Request=Access_Request_Template
