--- a/UI/sonar-project.properties
+++ b/UI/sonar-project.properties
@@ -32,5 +32,5 @@ sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslintconfigpath=tslint.json
 sonar.typescript.lcov.reportPaths=coverage/report-lcov/lcov.info
-sonar.coverage.exclusions=**/app/config/project-config/project-config.route.ts,**/main.ts,**/karma.conf.js,**/app/external-url.directive.ts,**/environments/*,**/app/dashboard/maturity/*,**/app/services/*,**/app/component/**/*,**/app/model/*,**/app/config/shared/**/*,**/app/module/*,**/app/utils/*
+sonar.coverage.exclusions=**/app/config/project-config/project-config.route.ts,**/main.ts,**/karma.conf.js,**/app/external-url.directive.ts,**/environments/*,**/app/dashboard/maturity/*,**/app/services/*,**/app/component/**/*,**/app/model/*,**/app/config/shared/**/*,**/app/module/*,**/app/utils/*,**/app/dashboardv2/filter-v2/filter-new.component.ts
 sonar.cpd.exclusions=**/app/dashboard/quality/*.html,**/app/dashboard/productivity/*.html,**/app/dashboard/executive/*.html
