--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -307,6 +307,15 @@
     }
   },
   {
+    "fieldName": "resolutionTypeForRejectionKPI34",
+    "fieldLabel": "Resolution type to be excluded",
+    "fieldType": "chips",
+    "section": "WorkFlow Status Mapping",
+    "tooltip": {
+      "definition": "Resolutions for defects which are to be excluded from 'Defect Density' calculation."
+    }
+  },
+  {
     "fieldName": "jiraDefectRejectionStatusKPI28",
     "fieldLabel": "Status to be excluded",
     "fieldType": "text",
@@ -870,7 +879,26 @@
     }
   },
   {
+    "fieldName": "resolutionTypeForRejectionKPI34",
+    "fieldLabel": "Resolution type to be excluded",
+    "fieldType": "chips",
+    "section": "WorkFlow Status Mapping",
+    "tooltip": {
+      "definition": "Resolutions for defects which are to be excluded from 'Defect Seepage rate' calculation."
+    }
+  },
+  {
     "fieldName": "jiraDefectRejectionStatusKPI35",
+    "fieldLabel": "Status to be excluded",
+    "fieldType": "text",
+    "fieldCategory": "workflow",
+    "section": "WorkFlow Status Mapping",
+    "tooltip": {
+      "definition": "All statuses which are considered for Rejecting defects"
+    }
+  },
+  {
+    "fieldName": "jiraDefectRejectionStatusKPI34",
     "fieldLabel": "Status to be excluded",
     "fieldType": "text",
     "fieldCategory": "workflow",
@@ -2585,6 +2613,24 @@
     }
   },
   {
+    "fieldName": "jiraLabelsQAKPI111",
+    "fieldLabel": "Labels to identify issues to be included",
+    "fieldType": "chips",
+    "section": "WorkFlow Status Mapping",
+    "tooltip": {
+      "definition": "Calculation should only those issues which have defined labels tagged."
+    }
+  },
+  {
+    "fieldName": "jiraLabelsKPI133",
+    "fieldLabel": "Labels to identify issues to be included",
+    "fieldType": "chips",
+    "section": "WorkFlow Status Mapping",
+    "tooltip": {
+      "definition": "Calculation should only those issues which have defined labels tagged."
+    }
+  },
+  {
     "fieldName": "jiraStoryIdentificationKPI166",
     "fieldLabel": "Issue type to identify Production incidents",
     "fieldType": "chips",
@@ -3102,7 +3148,47 @@
     }
   },
   {
+    "fieldName": "includeRCAForKPI34",
+    "fieldLabel": "Root cause values to be included",
+    "fieldType": "chips",
+    "section": "Defects Mapping",
+    "tooltip": {
+      "definition": "Root cause reasons for defects which are to be included in 'DSR' calculation"
+    }
+  },
+  {
     "fieldName": "defectPriorityKPI35",
+    "fieldLabel": "Priority to be excluded",
+    "fieldType": "multiselect",
+    "section": "Defects Mapping",
+    "tooltip": {
+      "definition": "Priority values of defects which are to be excluded in 'DSR' calculation"
+    },
+    "options": [
+      {
+        "label": "p1",
+        "value": "p1"
+      },
+      {
+        "label": "p2",
+        "value": "p2"
+      },
+      {
+        "label": "p3",
+        "value": "p3"
+      },
+      {
+        "label": "p4",
+        "value": "p4"
+      },
+      {
+        "label": "p5",
+        "value": "p5"
+      }
+    ]
+  },
+  {
+    "fieldName": "defectPriorityKPI34",
     "fieldLabel": "Priority to be excluded",
     "fieldType": "multiselect",
     "section": "Defects Mapping",
