--- a/processors/bitbucket/pom.xml
+++ b/processors/bitbucket/pom.xml
@@ -23,7 +23,7 @@
   <description>Bitbucket processor service</description>
   <packaging>jar</packaging>
   <artifactId>bitbucket-processor</artifactId>
-  <version>9.4.0-SNAPSHOT</version>
+  <version>9.5.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -280,7 +280,7 @@
 
 
   <scm>
-    <tag>4.6.1</tag>
+    <tag>9.5.0</tag>
   </scm>
 </project>
 
