--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common</artifactId>
 	<groupId>com.publicissapient.kpidashboard</groupId>
-	<version>9.5.0</version>
+	<version>9.5.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>Common package used by all microservices</description>
 
@@ -520,6 +520,6 @@
 	</build>
 
 	<scm>
-		<tag>9.5.0</tag>
+		<tag>4.6.1</tag>
 	</scm>
 </project>
