--- a/processors/jira/src/main/resources/application.properties
+++ b/processors/jira/src/main/resources/application.properties
@@ -117,6 +117,7 @@ samlUrlEndString=>
 jira.prevMonthCountToFetchData=12
 jira.daysToReduce=1
 jira.chunkSize=50
+threadCount=1
 
 #Tracking execution time toggle
 executiontime.aspect.enabled=true
