DTS-00000 Update application.properties

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -35,7 +35,6 @@ auth.baseUiUrl=https://dev-authnauth.tools.publicis.sapient.com
 #Purpose of properties : central auth backend url
 #possible values : http://authnauth:8787 , http://localhost:8787
 #used in/for : saml login , redirect and validate request
-auth.baseUrl=${AUTH_BASE_URL}
 auth.loginView=login_view
 auth.logoutView=logout_view
 auth.mailTemplate.Access_Request=Access_Request_Template
@@ -81,9 +80,9 @@ spring.kafka.producer.bootstrap-servers=kafka:9092
 spring.main.allow-circular-references=false
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.security.filter.dispatcher-types=async, error, request, forward
-spring.security.saml2.relyingparty.registration.azure.acs.location=${AUTH_BASE_URL}/saml/SSO
+spring.security.saml2.relyingparty.registration.azure.acs.location=${AUTH_BASE_URL}/api/saml/SSO
 spring.security.saml2.relyingparty.registration.azure.assertingparty.metadata-uri=${SAML_METADATA_URI}
 spring.security.saml2.relyingparty.registration.azure.entity-id=${SAML_ENTITY_ID}
 spring.security.saml2.relyingparty.registration.azure.singlelogout.binding=POST
-spring.security.saml2.relyingparty.registration.azure.singlelogout.responseUrl=${AUTH_BASE_URL}/saml/SingleLogout
-spring.security.saml2.relyingparty.registration.azure.singlelogout.url=${AUTH_BASE_URL}/saml/logout
+spring.security.saml2.relyingparty.registration.azure.singlelogout.responseUrl=${AUTH_BASE_URL}/api/saml/SingleLogout
+spring.security.saml2.relyingparty.registration.azure.singlelogout.url=${AUTH_BASE_URL}/api/saml/logout
